Initial commit for contended java